--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -1,12 +1,22 @@
 .ns-button {
-  @apply text-white outline-none border-none px-3 py-2 cursor-pointer ease-in duration-300;
+  @apply text-white outline-none border-none px-3 py-2 cursor-pointer ease-in duration-300 whitespace-nowrap;
 
   &--primary {
     @apply bg-teal-500 hover:bg-teal-600 hover:shadow-md;
+
+    &[disabled] {
+      @apply opacity-50 cursor-not-allowed hover:shadow-none hover:bg-teal-500;
+    }
   }
+
   &--secondary {
     @apply bg-white text-gray-800 border border-solid border-teal-400 hover:border-teal-600 hover:shadow-md;
+
+    &[disabled] {
+      @apply opacity-50 cursor-not-allowed hover:shadow-none hover:border-teal-400 hover:bg-white;
+    }
   }
+
   &--small {
     @apply text-sm px-2 py-1;
   }
