--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+}
+
+.gideon-roman {
+    font-family: "Gideon Roman", serif;
+}
